-
Bug
-
Resolution: Done
-
P2: Important
-
6.2.0
-
None
-
-
8
-
Team 1 Foundation_Sprint 44
If one instantiates perhipheral side of QLowEnergyController on Android and asks for mtu(),
we get a non-existent method error:
java.lang.NoSuchMethodError: no non-static method "Lorg/qtproject/qt/android/bluetooth/QtBluetoothLEServer;.mtu
The reason for this is that the LE peripheral Java class does not have that method (the control side does).
For Gerrit Dashboard: QTBUG-96995 | ||||||
---|---|---|---|---|---|---|
# | Subject | Branch | Project | Status | CR | V |
375420,4 | Add QLowEnergyController::mtu() support on BT LE server side on Android | dev | qt/qtconnectivity | Status: MERGED | +2 | 0 |
377548,2 | Add QLowEnergyController::mtu() support on BT LE server side on Android | 6.2 | qt/qtconnectivity | Status: MERGED | +2 | 0 |