Add QLowEnergyController::mtu() support on BT LE server side on Android

The mtu() function was available on the control side, this commit
adds this also on the server (peripheral) side.

Pick-to: 6.2
Task-number: QTBUG-96995
Change-Id: I2f13d2ba8a6d1f228f9da87d4d99b2a45fe5479d
Reviewed-by: Alex Blasche <alexander.blasche@qt.io>